# softsynth

./: .gitignore  .gitmodules  README.md  soft_synth_app.code-workspace
effects_bridge/: CMakeLists.txt
effects_bridge/src/: effects_ffi.cpp  effects_ffi.h
ffi_bridge/: CMakeLists.txt  TestCMakeLists.txt  test_ffi.c  test_real_ffi.c
ffi_bridge/src/: ffi_bridge.cpp  ffi_bridge.h  test_ffi.cpp
flutter_ui/: README.md  TESTING.md  pubspec.yaml
flutter_ui/android/app/: build.gradle.kts
flutter_ui/android/app/src/main/: AndroidManifest.xml
flutter_ui/android/app/src/main/kotlin/com/example/synth_ui/: MainActivity.kt
flutter_ui/ios/Runner/: Info.plist
flutter_ui/ios/Runner.xcodeproj/: project.pbxproj
flutter_ui/lib/: effects_controls.dart  effects_engine.dart  main.dart  oscillator_controls.dart  oscilloscope_controls.dart  synth_engine.dart
flutter_ui/linux/: CMakeLists.txt
flutter_ui/linux/runner/: my_application.cc
flutter_ui/macos/Runner.xcodeproj/: project.pbxproj
flutter_ui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter_ui/macos/Runner/Configs/: AppInfo.xcconfig
flutter_ui/test/: mock_synth_engine.dart  unit_test.dart  widget_test.dart
flutter_ui/web/: index.html  manifest.json
flutter_ui/windows/: CMakeLists.txt
flutter_ui/windows/runner/: Runner.rc  main.cpp
juce_audio_engine/: CMakeLists.txt
juce_audio_engine/Source/: Main.cpp  Oscillator.cpp  Oscillator.h  SynthEngine.cpp  SynthEngine.h  SynthEngineTests.cpp
juce_audio_engine/Source/Effects/: ChorusEffect.cpp  ChorusEffect.h  DelayEffect.cpp  DelayEffect.h  Effect.h  Filter.cpp  Filter.h  ReverbEffect.cpp  ReverbEffect.h
